--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "expo": "^50.0.0",
+    "expo-dev-client": "~3.3.11",
+    "expo-updates": "~0.24.12",
     "react": "18.2.0",
     "react-native": "0.73.6"
   },
