--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "1.21.0",
     "expo": "^50.0.0",
     "expo-dev-client": "~3.3.11",
     "expo-updates": "~0.24.12",
