--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "expo-dev-client": "~3.3.11",
     "expo-updates": "~0.24.12",
     "react": "18.2.0",
-    "react-native": "0.73.6"
+    "react-native": "0.73.6",
+    "react-native-webview": "13.6.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
